ajout de la class pelouse

--- a/home.html
+++ b/home.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE html>
 <html>
 <head>
-  <title>Page avce un style</title>
+  <title>Page avec un style</title>
   <link rel="stylesheet" href="myCSS.css">
 </head>
 <body>
 <!-- Contenu principal -->
-<h1>Page avce un style</h1>
+<h1>Page avec un style</h1>
 
-<p>Elle est vide et ne sert à rien...
+<p>Elle est vide et ne sert à rien...</p>
 
-<p>On complétera ça plus tard !!
+<p>On complétera ça plus tard !!</p>
+
+<p class="pelouse">Et là on met du vert</p>
 
 <!-- Signer et dater la page, c'est une question de politesse! -->
 <address>Fait un jour.<br>
