--- a/home.html
+++ b/home.html
@@ -12,7 +12,9 @@
 
 <p>On complétera ça plus tard !!</p>
 
+<marquee id="F1" scrollamount="100">
 <p class="pelouse">Et là on met du vert</p>
+</marquee>
 
 <!-- Signer et dater la page, c'est une question de politesse! -->
 <address>Fait un jour.<br>
